--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gnu-option",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A simple parser for GNU style command line options",
   "main": "index.js",
   "directories": {
@@ -15,6 +15,8 @@
   },
   "keywords": [
     "cli",
+    "gnu",
+    "posix",
     "options",
     "arguments",
     "args",
